Import layout partials

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,3 +1,5 @@
 @use 'base/base';
 @use 'components/accessibility';
 @use 'components/container';
+@use 'layouts/special-offer-banner';
+@use 'layouts/header';
