--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -1,15 +1,43 @@
 @font-face {
-  font-family: 'Inter var';
-  font-weight: 100 900;
+  font-family: 'Gilroy';
+  font-weight: 400;
   font-style: normal;
   font-display: swap;
-  src: url('/fonts/Inter-roman.var.woff2?v=3.19') format('woff2');
+  src: url('fonts/Gilroy-Regular.woff2') format('woff2'),
+    url('fonts/Gilroy-Regular.woff') format('woff');
 }
 
 @font-face {
-  font-family: 'Inter var';
-  font-weight: 100 900;
+  font-family: 'Gilroy';
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+  src: url('fonts/Gilroy-Medium.woff2') format('woff2'),
+    url('fonts/Gilroy-Medium.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Gilroy';
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+  src: url('fonts/Gilroy-Bold.woff2') format('woff2'), url('fonts/Gilroy-Bold.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Gilroy';
+  font-weight: 700;
   font-style: italic;
   font-display: swap;
-  src: url('/fonts/Inter-italic.var.woff2?v=3.19') format('woff2');
+  src: url('fonts/Gilroy-BoldItalic.woff2') format('woff2'),
+    url('fonts/Gilroy-BoldItalic.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'ArdelaEdgeX02';
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+  src: url('fonts/ArdelaEdgeX02-Black.woff2') format('woff2'),
+    url('fonts/ArdelaEdgeX02-Black.woff') format('woff');
 }
