--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -12,8 +12,8 @@
   font-weight: 500;
   font-style: normal;
   font-display: swap;
-  src: url('fonts/Gilroy-Medium.woff2') format('woff2'),
-    url('fonts/Gilroy-Medium.woff') format('woff');
+  src: url('/fonts/Gilroy-Medium.woff2') format('woff2'),
+    url('/fonts/Gilroy-Medium.woff') format('woff');
 }
 
 @font-face {
@@ -21,7 +21,8 @@
   font-weight: 700;
   font-style: normal;
   font-display: swap;
-  src: url('fonts/Gilroy-Bold.woff2') format('woff2'), url('fonts/Gilroy-Bold.woff') format('woff');
+  src: url('/fonts/Gilroy-Bold.woff2') format('woff2'),
+    url('/fonts/Gilroy-Bold.woff') format('woff');
 }
 
 @font-face {
@@ -29,8 +30,8 @@
   font-weight: 700;
   font-style: italic;
   font-display: swap;
-  src: url('fonts/Gilroy-BoldItalic.woff2') format('woff2'),
-    url('fonts/Gilroy-BoldItalic.woff') format('woff');
+  src: url('/fonts/Gilroy-BoldItalic.woff2') format('woff2'),
+    url('/fonts/Gilroy-BoldItalic.woff') format('woff');
 }
 
 @font-face {
@@ -38,6 +39,6 @@
   font-weight: 900;
   font-style: normal;
   font-display: swap;
-  src: url('fonts/ArdelaEdgeX02-Black.woff2') format('woff2'),
-    url('fonts/ArdelaEdgeX02-Black.woff') format('woff');
+  src: url('/fonts/ArdelaEdgeX02-Black.woff2') format('woff2'),
+    url('/fonts/ArdelaEdgeX02-Black.woff') format('woff');
 }
