Add `cursor: default`

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -9,6 +9,7 @@ html {
 }
 
 body {
+  cursor: default;
   background-color: variables.$body-bg-color;
   font-family: inherit;
   line-height: inherit;
