Import created partials

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,5 +1,8 @@
 @use 'base/base';
 @use 'components/accessibility';
 @use 'components/container';
+@use 'components/typography';
 @use 'layouts/special-offer-banner';
 @use 'layouts/header';
+@use 'layouts/product-review';
+@use 'layouts/how-were-different';
