--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -20,6 +20,7 @@ $media-breakpoints: ($sm, $md, $lg, $xl, $xxl);
 $primary: #b9db01;
 $white: #fff;
 $black: #000;
+$gray: #8d8d8d;
 
 // body
 $body-bg-color: $white;
