--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -3,8 +3,8 @@
   font-weight: 400;
   font-style: normal;
   font-display: swap;
-  src: url('fonts/Gilroy-Regular.woff2') format('woff2'),
-    url('fonts/Gilroy-Regular.woff') format('woff');
+  src: url('/fonts/Gilroy-Regular.woff2') format('woff2'),
+    url('/fonts/Gilroy-Regular.woff') format('woff');
 }
 
 @font-face {
