Add footer variables

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -31,3 +31,7 @@ $so-bg-color: $primary;
 
 // header
 $header-bg-color: $black;
+
+// footer
+$footer-bg-color: $black;
+$footer-text-color: $white;
