Create additional footer variables

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -35,3 +35,5 @@ $header-bg-color: $black;
 // footer
 $footer-bg-color: $black;
 $footer-text-color: $white;
+$footer-cta-bg: $primary;
+$footer-cta-text: $black;
