Create CTA button variable

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -32,6 +32,9 @@ $so-bg-color: $primary;
 // header
 $header-bg-color: $black;
 
+// product-review
+$cta-bg-color: $primary;
+
 // footer
 $footer-bg-color: $black;
 $footer-text-color: $white;
