--- a/src/scss/abstracts/_functions.scss
+++ b/src/scss/abstracts/_functions.scss
@@ -1,10 +1,12 @@
 @use 'sass:math';
 
-@function rem($pixel) {
+// Converts px to rem unit
+@function to-rem($pixel) {
   @return math.div($pixel, 16) * 1rem;
 }
 
-@function em($pixel) {
+// Converts px to em units
+@function to-em($pixel) {
   @return math.div($pixel, 16) * 1em;
 }
 
