--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -5,5 +5,7 @@
 @use 'layouts/special-offer-banner';
 @use 'layouts/header';
 @use 'layouts/product-review';
+@use 'layouts/about-us-section';
 @use 'layouts/how-were-different';
+@use 'layouts/product-pricing';
 @use 'layouts/footer';
