Update a function's name

--- a/src/scss/abstracts/_functions.scss
+++ b/src/scss/abstracts/_functions.scss
@@ -1,7 +1,7 @@
 @use 'sass:math';
 
 // Converts px to rem unit
-@function to-rem($pixel) {
+@function px-to-rem($pixel) {
   @return math.div($pixel, 16) * 1rem;
 }
 
