--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -1,19 +1,11 @@
-@use '../abstracts/functions' as *;
-@use '../abstracts/variables' as *;
-
 .header {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-  background-color: $header-bg-color;
-  user-select: none;
+  @apply py-2 bg-black select-none;
 
   > .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    @apply flex justify-between items-center;
   }
 }
 
 .header-logo {
-  width: to-rem(196);
+  @apply w-48;
 }
