--- a/src/scss/layouts/_product-review.scss
+++ b/src/scss/layouts/_product-review.scss
@@ -1,66 +1,53 @@
 @use 'sass:math';
+@use '../abstracts/functions' as *;
 @use '../abstracts/variables';
 
 .product-review-section {
-  padding-top: 2.75rem;
-  padding-bottom: 4rem;
+  @apply pt-10 pb-16;
 }
 
 .product-review-grid {
-  display: grid;
-  gap: 2rem;
-  margin-top: 3.75rem;
+  @apply grid grid-cols-1 gap-12 mt-16;
+
+  @screen lg {
+    @apply grid-cols-2;
+  }
 }
 
 .product-feedback-row {
-  display: flex;
-  flex-direction: column;
-  margin-right: -1rem;
-  margin-left: -1rem;
+  @apply flex flex-col -mx-4;
 
   > div {
-    padding-right: 1rem;
-    padding-left: 1rem;
+    @apply px-4;
 
     + div {
-      margin-top: 1rem;
+      @apply mt-4;
     }
   }
 }
 
 .product-review-feedback {
-  color: variables.$gray;
-  font-weight: 700;
+  @apply mt-5 text-neutral text-xl font-bold;
 }
 
 .product-badge-icons {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
+  @apply flex flex-row items-center;
 
   > img ~ img {
-    margin-right: 0;
-    margin-left: 1rem;
+    @apply ml-4;
   }
 }
 
 .product-badge {
-  width: 5.25rem;
+  @apply w-20;
 }
 
 .product-detail-list {
-  margin-top: 0.875rem;
-  list-style-position: inside;
-  list-style-type: disc;
+  @apply mt-4 list-inside list-disc;
 }
 
 .product-review-cta {
-  display: flex;
-  width: 100%;
-  margin-top: 1rem;
-  padding: 1.625rem;
-  border-radius: 9999px;
-  background-color: variables.$cta-bg-color;
+  @apply flex flex-col w-full mt-4 p-6 rounded-full bg-primary;
 }
 
 @media (min-width: variables.$sm) {
@@ -68,8 +55,7 @@
     flex-direction: row;
 
     > div + div {
-      margin-top: 0;
-      margin-bottom: 0;
+      @apply my-0;
     }
 
     > div:nth-of-type(1) {
@@ -83,10 +69,6 @@
 }
 
 @media (min-width: variables.$lg) {
-  .product-review-grid {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
   .product-badge-icons {
     flex-direction: column;
 
