Import fonts and add more styles on the base layer

--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -1,2 +1,14 @@
+@import 'tailwindcss/base';
+@import 'fonts';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+@layer base {
+  body {
+    @apply cursor-default antialiased;
+  }
+
+  img {
+    @apply select-none;
+  }
+}
