--- a/src/scss/components/_typography.scss
+++ b/src/scss/components/_typography.scss
@@ -1,44 +1,39 @@
 @use '../abstracts/variables';
 
-.text-center {
-  text-align: center;
+.heading-one {
+  @apply text-2xl italic font-bold text-center uppercase;
+
+  @screen sm {
+    @apply text-3xl;
+  }
+
+  @screen md {
+    @apply text-4xl;
+  }
 }
 
 .large-text {
-  font-weight: 700;
-  font-size: 1.5rem;
-  font-style: italic;
-  line-height: 1;
-  letter-spacing: -0.025em;
-  text-transform: uppercase;
+  @apply font-bold text-2xl italic tracking-tight uppercase;
+
+  @screen sm {
+    @apply text-4xl;
+  }
+
+  @screen md {
+    @apply text-5xl;
+  }
 }
 
 .medium-text {
-  font-weight: 700;
-  font-size: 1.5rem;
+  @apply font-bold text-2xl;
+
+  @screen md {
+    @apply text-3xl;
+  }
 }
 
 .small-text {
-  font-size: 1rem;
-}
-
-@media (min-width: variables.$sm) {
-  .large-text {
-    font-size: 2.25rem;
-  }
-}
-
-@media (min-width: variables.$md) {
-  .large-text {
-    font-size: 2.5rem;
-  }
-
-  .medium-text {
-    font-size: 1.875rem;
-  }
-
-  .small-text {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
+  @screen md {
+    @apply text-xl;
   }
 }
