Use BEM naming convention

--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -4,8 +4,8 @@
   .container {
     @apply flex justify-between items-center;
   }
-}
 
-.header-logo {
-  @apply w-48;
+  &__logo {
+    @apply w-48;
+  }
 }
