Rename section class name

--- a/src/scss/layouts/_product-overview.scss
+++ b/src/scss/layouts/_product-overview.scss
@@ -1,7 +1,7 @@
 @use '../abstracts/functions' as *;
 @use '../abstracts/variables' as *;
 
-.product-overview-section {
+.product-overview {
   background-image: radial-gradient(75.5% 75.5% at 26.79% 55.09%, #404040 0%, $black 100%);
 
   @apply pt-24 pb-28;
