--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,8 +1,9 @@
+@use 'components/buttons';
 @use 'components/typography';
 @use 'layouts/special-offer-banner';
 @use 'layouts/header';
 @use 'layouts/product-review';
-@use 'layouts/about-us-section';
+@use 'layouts/about-us';
 @use 'layouts/how-were-different';
 @use 'layouts/product-overview';
 @use 'layouts/product-pricing';
