--- a/src/scss/layouts/_how-were-different.scss
+++ b/src/scss/layouts/_how-were-different.scss
@@ -1,9 +1,5 @@
-.how-different-section {
+.how-different {
   @apply pt-16 pb-24;
-}
-
-.how-different-description {
-  @apply mt-3;
 }
 
 .how-different-grid {
