--- a/src/scss/layouts/_footer.scss
+++ b/src/scss/layouts/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  @apply pt-16 pb-10 text-white bg-footer bg-no-repeat bg-center bg-cover select-none;
+  @apply pt-16 pb-10 text-white bg-footer bg-no-repeat bg-center bg-cover;
 }
 
 .footer-headline {
@@ -15,10 +15,6 @@
 
   .cta-text {
     @apply font-bold text-2xl italic tracking-tighter;
-  }
-
-  .arrow-right-icon {
-    @apply w-6 h-6 bg-arrow-icon bg-no-repeat bg-center bg-cover;
   }
 }
 
