--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,4 +1,6 @@
+@use '@splidejs/splide/dist/css/splide.min';
 @use 'components/buttons';
+@use 'components/icons';
 @use 'components/typography';
 @use 'layouts/special-offer-banner';
 @use 'layouts/header';
