Add Sass comments

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,6 +1,9 @@
+// Components
 @use 'components/buttons';
 @use 'components/icons';
 @use 'components/typography';
+
+// Layouts
 @use 'layouts/special-offer-banner';
 @use 'layouts/header';
 @use 'layouts/product-review';
