--- a/src/scss/layouts/_product-pricing.scss
+++ b/src/scss/layouts/_product-pricing.scss
@@ -3,14 +3,8 @@
 }
 
 .pricing-card-grid {
-  @apply grid gap-6 items-center;
-
-  @screen sm {
-    @apply grid-cols-2;
-  }
-
-  @screen lg {
-    @apply grid-cols-4;
+  > div {
+    @apply grid gap-6 items-center;
   }
 }
 
@@ -62,4 +56,20 @@
 
 .pricing-card__button {
   @apply block w-full mt-3 p-3 font-ardela-edge rounded-xl bg-primary;
+}
+
+@screen sm {
+  .pricing-card-grid {
+    > div {
+      @apply grid-cols-2;
+    }
+  }
+}
+
+@screen xl {
+  .pricing-card-grid {
+    > div {
+      @apply grid-cols-4;
+    }
+  }
 }
